<resources>
    <string name="app_name">위잉위잉</string>
    <string name="app_title">서울시 모기예보제 정보</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">서울시 열린데이터 광장</string>
    <string name="nav_header_description">모기 발생 예보서비스</string>
    <string name="nav_title_guide">모기예보제란?</string>
    <string name="nav_title_data_source">데이터 출처</string>
    <string name="nav_title_action_know_how">시민 행동 요령 출처</string>
    
    <string name="data_source_uri">http://data.seoul.go.kr/openinf/openapiview.jsp?infId=OA-13285</string>
    <string name="action_know_how_uri">http://health.seoul.go.kr/archives/51085</string>

    <string name="action_settings">Settings</string>
    <string name="action_sharing">Sharing</string>
    <string name="stage_of_occurrence">모기발생단계</string>
    <string name="measurement_image">measurement image</string>
    <string name="measurement_needle_image">measurement needle image</string>
    <string name="step_by_step_behavior">행동 요령</string>
    <string name="action1_text">방어적 행동 요령</string>
    <string name="action2_text">능동적 행동 요령</string>
    <string name="action3_text">기관 사회 행동 요령</string>
    <string name="internet_error_message">인터넷 요청 중에 문제가 발생하였습니다.\n잠시 후에 다시 해주세요.</string>
    <string name="source_error_message">현재 공공데이터 정보가 없습니다.\n잠시 후에 다시 해주세요.</string>
</resources>
